; ModuleID = '/home/carl/AnghaBench/vlc/src/android/extr_specific.c_config_GetUserDir.c'
source_filename = "/home/carl/AnghaBench/vlc/src/android/extr_specific.c_config_GetUserDir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c".share\00", align 1
@.str.1 = private unnamed_addr constant [38 x i8] c"/sdcard/Android/data/org.videolan.vlc\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c".cache\00", align 1
@.str.3 = private unnamed_addr constant [44 x i8] c"/sdcard/Android/data/org.videolan.vlc/cache\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c".config\00", align 1
@ppsz_generic_names = common dso_local global i8** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @config_GetUserDir(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %36 [
    i32 129, label %6
    i32 139, label %8
    i32 134, label %10
    i32 138, label %12
    i32 137, label %14
    i32 135, label %14
    i32 130, label %14
    i32 131, label %14
    i32 136, label %14
    i32 133, label %14
    i32 132, label %14
    i32 128, label %14
  ]

6:                                                ; preds = %1
  %7 = call i8* @config_GetHomeDir(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0))
  store i8* %7, i8** %2, align 8
  br label %37

8:                                                ; preds = %1
  %9 = call i8* @config_GetHomeDir(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.3, i64 0, i64 0))
  store i8* %9, i8** %2, align 8
  br label %37

10:                                               ; preds = %1
  %11 = call i8* @config_GetHomeDir(i8* null, i8* null)
  store i8* %11, i8** %2, align 8
  br label %37

12:                                               ; preds = %1
  %13 = call i8* @config_GetHomeDir(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i8* null)
  store i8* %13, i8** %2, align 8
  br label %37

14:                                               ; preds = %1, %1, %1, %1, %1, %1, %1, %1
  %15 = load i32, i32* %3, align 4
  %16 = icmp sge i32 %15, 137
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = load i32, i32* %3, align 4
  %19 = icmp sle i32 %18, 128
  br label %20

20:                                               ; preds = %17, %14
  %21 = phi i1 [ false, %14 ], [ %19, %17 ]
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert(i32 %22)
  %24 = load i8**, i8*** @ppsz_generic_names, align 8
  %25 = load i32, i32* %3, align 4
  %26 = sub nsw i32 %25, 137
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i8*, i8** %24, i64 %27
  %29 = load i8*, i8** %28, align 8
  store i8* %29, i8** %4, align 8
  %30 = load i8*, i8** %4, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %32, label %35

32:                                               ; preds = %20
  %33 = load i8*, i8** %4, align 8
  %34 = call i8* @config_GetGenericDir(i8* %33)
  store i8* %34, i8** %2, align 8
  br label %37

35:                                               ; preds = %20
  br label %36

36:                                               ; preds = %35, %1
  store i8* null, i8** %2, align 8
  br label %37

37:                                               ; preds = %36, %32, %12, %10, %8, %6
  %38 = load i8*, i8** %2, align 8
  ret i8* %38
}

declare dso_local i8* @config_GetHomeDir(i8*, i8*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i8* @config_GetGenericDir(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
